Update Search Bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="#contact">Contact Us</a></li>
         </ul>
         <div class="search-bar o-nav">
-            <input type="text" name="search" id="search">
+            <input type="text" name="search" id="search" placeholder="Enter search">
             <button class="buttonSearch buttonMain">Search</button>
         </div>
         <div class="burger">
